[package]
name = "rustysec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "4.4.2"
clap_complete = "4.4.0"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde-xml-rs = "0.5"
thiserror = "1.0.49"
oapi = "0.1.2"
sppparse = "0.1.4"
